2002-04-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* Makefile.am : added so-scrollbar.glade
	* so-scrollbar.glade : new

2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* Makefile.am : add dialog-col-row.c, remove dialog-simple-input.c
	* colrow.glade : slightly redesigned
	* dialog-simple-input.c : removed
	* dialogs.h : add dialog_col_row, remove dialog_get_number and 
	  dialog_choose_cols_vs_rows
	* dialog-col-row.c : new

2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-cell-sort.c : use gnumeric-cell-renderer-toggle rather than 
	  gnumeric-cell-renderer

2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* Makefile.am : added dialog-row-height.c and dialog-col-width.c
	* dialog-row-height.c : new
	* dialog-col-width.c : new
	* dialog-row-heigth.glade : added checkbox and spin button
	* dialog-col-width.glade : ditto
	* dialogs.h : added dialog_row_height and dialog_col_width
	* dialog-zoom.glade : fix button formating

2002-04-05  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-random-generator.c : make undoable

2002-04-03  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-cell-sort.c : use setup_range_from_value

2002-04-03  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c : added on-line description
	* preferences.glade : ditto
	
2002-04-03  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-preferences.c : set the treeview pref values in response
	  to a notification rather than directly.
	
2002-04-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-formula-guru.c : use gnumeric-cell-renderer-text
	* dialog-preferences.c : use gnumeric-cell-renderer-text

2002-04-01  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-cell-sort.c (dialog_destroy) : fix leak

2002-04-01  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* Makefile.am : add dialog-preferences.c and preferences.glade
	* dialogs.h : add dialog_preferences
	* dialog-preferences.c : new
	* preferences.glade : new
